dbn_dynamic_programming.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "(36, 13, 12, 25, 30, 13, 25)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "8"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,42 +172,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_by_range(array, x, y):\n",
     "    if x > y:\n",
-    "        x, y = y, x\n",
-    "        x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
-    "        y_idx = binary_search_duplicate_elements(array, y, 0, len(array)-1)\n",
-    "        \n",
-    "    else:        \n",
-    "        min_greater_than_y = min([k for k in array if k > y])\n",
-    "        x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
-    "        y_idx = binary_search_duplicate_elements(array, min_greater_than_y, 0, len(array)-1)    \n",
+    "        x, y = y, x      \n",
+    "      \n",
+    "    min_greater_than_y = min([k for k in array if k > y])\n",
+    "    x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
+    "    y_idx = binary_search_duplicate_elements(array, min_greater_than_y, 0, len(array)-1)    \n",
     "\n",
     "    return y_idx - x_idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
     }
    ],
    "source": [
-    "count_by_range(seq, 6, 6)"
+    "print(count_by_range(seq, 5, 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_by_range(seq, 6, 6))"
    ]
   }
  ],
