--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -45,7 +45,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d[0] = "
+    "d[0] = storages[0] + max(storages[0+2: ])\n",
+    "d[1] = storages[1] + max(storages[1+2: ])\n",
+    "d[2] = storages[2] + max(storages[0], max(storages[2+2: ]))\n",
+    "d[3] = storages[3] + max(storages[1], max(storages[3+2: ]))"
    ]
   }
  ],
