dbn_dynamic_programming.ipynb

--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -48,7 +48,10 @@
     "d[0] = storages[0] + max(storages[0+2: ])\n",
     "d[1] = storages[1] + max(storages[1+2: ])\n",
     "d[2] = storages[2] + max(storages[0], max(storages[2+2: ]))\n",
-    "d[3] = storages[3] + max(storages[1], max(storages[3+2: ]))"
+    "d[3] = storages[3] + max(storages[1], max(storages[3+2: ]))\n",
+    "\n",
+    "for n in range(4, N):\n",
+    "    d[n] = storages[n] + max(storages[ :n-2], storages[n+2: ])"
    ]
   }
  ],
