dbn_dynamic_programming.ipynb

--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -63,7 +63,7 @@
     "d[3] = storages[3] + max(storages[1], max(storages[3+2: ]))\n",
     "\n",
     "for n in range(4, N-2):    \n",
-    "    d[n] = storages[n] + max(storages[ :n-2].extend(storages[n+2: ]))"
+    "    d[n] = storages[n] + max(max(storages[ :n-2]), max(storages[n+2: ]))"
    ]
   },
   {
