dbn_dynamic_programming.ipynb

--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "N = int(input())\n",
-    "storages = list(map(int, input().split()))     # 5 2 9 11 8 4 3 6 10 2 7 4 1 8 12\n",
+    "storages = list(map(int, input().split()))     # 5 2 9 11 8 4 3 6 10 2 7 4 1 8 7\n",
     "print(f\"N : {N}\")\n",
     "print(f\"storages : {storages}\")"
    ]
@@ -41,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dynamic_programming.ipynb Cell 3\u001b[0m line \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m d[\u001b[39m3\u001b[39m] \u001b[39m=\u001b[39m storages[\u001b[39m3\u001b[39m] \u001b[39m+\u001b[39m \u001b[39mmax\u001b[39m(storages[\u001b[39m1\u001b[39m], \u001b[39mmax\u001b[39m(storages[\u001b[39m3\u001b[39m\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m: ]))\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m4\u001b[39m, N\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m):    \n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     d[n] \u001b[39m=\u001b[39m storages[n] \u001b[39m+\u001b[39m \u001b[39mmax\u001b[39;49m(storages[ :n\u001b[39m-\u001b[39;49m\u001b[39m2\u001b[39;49m]\u001b[39m.\u001b[39;49mextend(storages[n\u001b[39m+\u001b[39;49m\u001b[39m2\u001b[39;49m: ]))\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d[0] = storages[0] + max(storages[0+2: ])\n",
     "d[1] = storages[1] + max(storages[1+2: ])\n",
@@ -68,42 +56,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "([5, 2, 9], [6, 10, 2, 7, 4, 1, 8, 12], None)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 14, 21, 23, 20, 16, 15, 18, 22, 14, 19, 16, 13, 0, 0]\n"
+     ]
     }
    ],
    "source": [
-    "storages[ :3], storages[7: ], storages[ :3].append(storages[7: ])"
+    "print(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(4, [6, 10, 2, 7, 4, 1, 8, 12])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 9, 11, 8, 4, 3, 6, 10, 2, 7, 4, 1, 8, 12]\n"
+     ]
     }
    ],
    "source": [
-    "storages[5], max(storages[ : 5-2], storages[5+2: ])"
+    "print(storages)"
    ]
   },
   {
