--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +90,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_max(array, n):\n",
+    "    left_max = max(array[:n-2])\n",
+    "    right_max = max(array[n+2:])\n",
+    "    final_max = max(left_max, right_max)\n",
+    "    return final_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_max(storages, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dynamic_programming.ipynb Cell 8\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m find_max(storages, \u001b[39m2\u001b[39;49m)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dynamic_programming.ipynb Cell 8\u001b[0m line \u001b[0;36mfind_max\u001b[1;34m(array, n)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfind_max\u001b[39m(array, n):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     left_max \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39;49m(array[:n\u001b[39m-\u001b[39;49m\u001b[39m2\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     right_max \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(array[n\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m:])\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dynamic_programming.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     final_max \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(left_max, right_max)\n",
+      "\u001b[1;31mValueError\u001b[0m: max() arg is an empty sequence"
+     ]
+    }
+   ],
+   "source": [
+    "find_max(storages, 2)"
+   ]
   }
  ],
  "metadata": {
