--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -23,20 +23,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 2, 9, 11, 8, 4, 3, 6, 10, 2, 7, 4, 1, 8, 7]\n"
+      "[5, 2, 9, 11, 8, 4, 3, 6, 10, 2, 7, 4, 1, 8, 7]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n"
      ]
     }
    ],
    "source": [
     "d = [k for k in storages]\n",
-    "print(d)"
+    "print(d)\n",
+    "\n",
+    "chk = [False] * N\n",
+    "print(chk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totals = []\n",
+    "\n",
+    "while True:\n",
+    "    max_element = max(storages)\n",
+    "    left_max_element_idx = storages.index(max_element) - 1\n",
+    "    right_max_element_idx = storages.index(max_element) + 1"
    ]
   }
  ],
