--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -53,8 +53,23 @@
     "\n",
     "while True:\n",
     "    max_element = max(storages)\n",
+    "    max_element_idx = storages.index(max_element)\n",
     "    left_max_element_idx = storages.index(max_element) - 1\n",
-    "    right_max_element_idx = storages.index(max_element) + 1"
+    "    right_max_element_idx = storages.index(max_element) + 1\n",
+    "    \n",
+    "    if max_element_idx >= 1 and max_element_idx <= len(storages)-2 and not chk[max_element_idx] and not chk[left_max_element_idx] and not chk[right_max_element_idx]:\n",
+    "        chk[max_element_idx] = True\n",
+    "        chk[left_max_element_idx] = True\n",
+    "        chk[right_max_element_idx] = True\n",
+    "        totals.append(storages.pop(max_element_idx))\n",
+    "    \n",
+    "    elif max_element_idx == 0 and not chk[max_element_idx] and not chk[right_max_element_idx]: \n",
+    "        totals.append(storages.pop(max_element_idx))\n",
+    "    \n",
+    "    elif max_element_idx == len(storages)-1 and not chk[max_element_idx] and not chk[left_max_element_idx]:\n",
+    "        totals.append(storages.pop(max_element_idx))\n",
+    "        \n",
+    "    "
    ]
   }
  ],
