--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -81,10 +81,10 @@
     "totals = []\n",
     "\n",
     "while True:\n",
-    "    max_element = max(d)\n",
-    "    max_element_idx = storages.index(max_element)\n",
-    "    left_max_element_idx = storages.index(max_element) - 1\n",
-    "    right_max_element_idx = storages.index(max_element) + 1\n",
+    "    max_element = max(storages)\n",
+    "    max_element_idx = d.index(max_element)\n",
+    "    left_max_element_idx = d.index(max_element) - 1\n",
+    "    right_max_element_idx = d.index(max_element) + 1\n",
     "    \n",
     "    if max_element_idx >= 1 and max_element_idx <= len(storages)-2 and not chk[max_element_idx] and not chk[left_max_element_idx] and not chk[right_max_element_idx]:\n",
     "        chk[max_element_idx] = True\n",
@@ -92,13 +92,80 @@
     "        chk[right_max_element_idx] = True\n",
     "        totals.append(storages.pop(max_element_idx))\n",
     "    \n",
-    "    elif max_element_idx == 0 and not chk[max_element_idx] and not chk[right_max_element_idx]: \n",
+    "    elif max_element_idx == 0 and not chk[max_element_idx] and not chk[right_max_element_idx]:\n",
+    "        chk[max_element_idx] = True\n",
+    "        chk[right_max_element_idx] = True\n",
     "        totals.append(storages.pop(max_element_idx))\n",
     "    \n",
     "    elif max_element_idx == len(storages)-1 and not chk[max_element_idx] and not chk[left_max_element_idx]:\n",
+    "        chk[max_element_idx] = True\n",
+    "        chk[left_max_element_idx] = True\n",
     "        totals.append(storages.pop(max_element_idx))\n",
     "        \n",
-    "    "
+    "    else:\n",
+    "        chk[max_element_idx] = True\n",
+    "        storages.pop(max_element_idx)    \n",
+    "        \n",
+    "    if not storages:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "totals = []\n",
+    "\n",
+    "while True:\n",
+    "    max_element = max(storages)\n",
+    "    max_element_idx = d.index(max_element)\n",
+    "    left_max_element_idx = d.index(max_element) - 1\n",
+    "    right_max_element_idx = d.index(max_element) + 1\n",
+    "    \n",
+    "    if max_element_idx >= 1 and max_element_idx <= len(storages)-2: \n",
+    "        if not chk[max_element_idx] and not chk[left_max_element_idx] and not chk[right_max_element_idx]:\n",
+    "            chk[max_element_idx] = True\n",
+    "            chk[left_max_element_idx] = True\n",
+    "            chk[right_max_element_idx] = True\n",
+    "            totals.append(storages.pop(max_element_idx))\n",
+    "        else:\n",
+    "            continue\n",
+    "    \n",
+    "    elif max_element_idx == 0:\n",
+    "        if not chk[max_element_idx] and not chk[right_max_element_idx]:\n",
+    "            chk[max_element_idx] = True\n",
+    "            chk[right_max_element_idx] = True\n",
+    "            totals.append(storages.pop(max_element_idx))\n",
+    "        else:\n",
+    "            continue\n",
+    "    \n",
+    "    elif max_element_idx == len(storages)-1:\n",
+    "        if not chk[max_element_idx] and not chk[left_max_element_idx]:\n",
+    "            chk[max_element_idx] = True\n",
+    "            chk[left_max_element_idx] = True\n",
+    "            totals.append(storages.pop(max_element_idx))\n",
+    "        else:\n",
+    "            continue\n",
+    "        \n",
+    "    else:\n",
+    "        chk[max_element_idx] = True\n",
+    "        storages.pop(max_element_idx)    \n",
+    "        \n",
+    "    if not storages:\n",
+    "        break"
    ]
   }
  ],
