--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -77,85 +77,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "totals = []\n",
-    "\n",
-    "while True:\n",
-    "    max_element = max(storages)\n",
-    "    max_element_idx = d.index(max_element)\n",
-    "    left_max_element_idx = d.index(max_element) - 1\n",
-    "    right_max_element_idx = d.index(max_element) + 1\n",
-    "    \n",
-    "    if max_element_idx >= 1 and max_element_idx <= len(storages)-2 and not chk[max_element_idx] and not chk[left_max_element_idx] and not chk[right_max_element_idx]:\n",
-    "        chk[max_element_idx] = True\n",
-    "        chk[left_max_element_idx] = True\n",
-    "        chk[right_max_element_idx] = True\n",
-    "        totals.append(storages.pop(max_element_idx))\n",
-    "    \n",
-    "    elif max_element_idx == 0 and not chk[max_element_idx] and not chk[right_max_element_idx]:\n",
-    "        chk[max_element_idx] = True\n",
-    "        chk[right_max_element_idx] = True\n",
-    "        totals.append(storages.pop(max_element_idx))\n",
-    "    \n",
-    "    elif max_element_idx == len(storages)-1 and not chk[max_element_idx] and not chk[left_max_element_idx]:\n",
-    "        chk[max_element_idx] = True\n",
-    "        chk[left_max_element_idx] = True\n",
-    "        totals.append(storages.pop(max_element_idx))\n",
-    "        \n",
-    "    else:\n",
-    "        chk[max_element_idx] = True\n",
-    "        storages.pop(max_element_idx)    \n",
-    "        \n",
-    "    if not storages:\n",
-    "        break"
+    "##### Dynamic Programming 적용 해구하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "totals = []\n",
-    "\n",
-    "while True:\n",
-    "    max_element = max(storages)\n",
-    "    max_element_idx = d.index(max_element)\n",
-    "    left_max_element_idx = d.index(max_element) - 1\n",
-    "    right_max_element_idx = d.index(max_element) + 1\n",
-    "    \n",
-    "    if max_element_idx >= 1 and max_element_idx <= len(storages)-2: \n",
-    "        if not chk[max_element_idx] and not chk[left_max_element_idx] and not chk[right_max_element_idx]:\n",
-    "            chk[max_element_idx] = True\n",
-    "            chk[left_max_element_idx] = True\n",
-    "            chk[right_max_element_idx] = True\n",
-    "            totals.append(storages.pop(max_element_idx))\n",
-    "        else:\n",
-    "            chk[max_element_idx] = True\n",
-    "            storages.pop(max_element_idx)      \n",
-    "        \n",
-    "    \n",
-    "    elif max_element_idx == 0:\n",
-    "        if not chk[max_element_idx] and not chk[right_max_element_idx]:\n",
-    "            chk[max_element_idx] = True\n",
-    "            chk[right_max_element_idx] = True\n",
-    "            totals.append(storages.pop(max_element_idx))\n",
-    "        else:\n",
-    "            chk[max_element_idx] = True\n",
-    "            storages.pop(max_element_idx) \n",
-    "    \n",
-    "    elif max_element_idx == len(storages)-1:\n",
-    "        if not chk[max_element_idx] and not chk[left_max_element_idx]:\n",
-    "            chk[max_element_idx] = True\n",
-    "            chk[left_max_element_idx] = True\n",
-    "            totals.append(storages.pop(max_element_idx))\n",
-    "        else:\n",
-    "            chk[max_element_idx] = True\n",
-    "            storages.pop(max_element_idx)         \n",
-    "     \n",
-    "    if not storages:\n",
-    "        break"
-   ]
+   "source": []
   }
  ],
  "metadata": {
