--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -131,6 +131,68 @@
     "dp = [0] * N\n",
     "print(dp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_max_total(array, i):\n",
+    "    if i == 0:\n",
+    "        dp[i] = array[i]\n",
+    "    elif i == 1:\n",
+    "        dp[i] = max(array[i-1], array[i])\n",
+    "    else:\n",
+    "        dp[i] = max(dp[i-1], dp[i-2] + array[i])\n",
+    "        \n",
+    "    return dp[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 5\n",
+      "1 : 5\n",
+      "2 : 14\n",
+      "3 : 16\n",
+      "4 : 22\n",
+      "5 : 22\n",
+      "6 : 25\n",
+      "7 : 28\n",
+      "8 : 35\n",
+      "9 : 35\n",
+      "10 : 42\n",
+      "11 : 42\n",
+      "12 : 43\n",
+      "13 : 50\n",
+      "14 : 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "dp_dict = {}\n",
+    "for i in range(N):\n",
+    "    dp_dict[i] = calc_max_total(storages, i)\n",
+    "    \n",
+    "for k, v in dp_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p"
+   ]
   }
  ],
  "metadata": {
