--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -95,35 +95,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N : 15\n",
-      "storages : [5, 2, 9, 11, 8, 4, 3, 6, 10, 2, 7, 4, 1, 8, 7]\n"
+      "N : 4\n",
+      "storages : [1, 3, 1, 5]\n"
      ]
     }
    ],
    "source": [
     "N = int(input())\n",
-    "storages = list(map(int, input().split()))     # 5 2 9 11 8 4 3 6 10 2 7 4 1 8 7\n",
+    "storages = list(map(int, input().split()))     # 5 2 9 11 8 4 3 6 10 2 7 4 1 8 7     # 1 3 1 5\n",
     "print(f\"N : {N}\")\n",
     "print(f\"storages : {storages}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "[0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -151,28 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : 5\n",
-      "1 : 5\n",
-      "2 : 14\n",
-      "3 : 16\n",
-      "4 : 22\n",
-      "5 : 22\n",
-      "6 : 25\n",
-      "7 : 28\n",
-      "8 : 35\n",
-      "9 : 35\n",
-      "10 : 42\n",
-      "11 : 42\n",
-      "12 : 43\n",
-      "13 : 50\n",
-      "14 : 50\n"
+      "0 : 1\n",
+      "1 : 3\n",
+      "2 : 3\n",
+      "3 : 8\n"
      ]
     }
    ],
@@ -183,15 +172,6 @@
     "    \n",
     "for k, v in dp_dict.items():\n",
     "    print(f\"{k} : {v}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p"
    ]
   }
  ],
