--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -95,15 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N : 4\n",
-      "storages : [1, 3, 1, 5]\n"
+      "N : 15\n",
+      "storages : [5, 2, 9, 11, 8, 4, 3, 6, 10, 2, 7, 4, 1, 8, 7]\n"
      ]
     }
    ],
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0]\n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -134,34 +134,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_max_total(array, i):\n",
-    "    if i == 0:\n",
-    "        dp[i] = array[i]\n",
-    "    elif i == 1:\n",
-    "        dp[i] = max(array[i-1], array[i])\n",
-    "    else:\n",
-    "        dp[i] = max(dp[i-1], dp[i-2] + array[i])\n",
-    "        \n",
-    "    return dp[i]"
+    "dp[0] = storages[0]\n",
+    "dp[1] = max(storages[0], storages[1])\n",
+    "\n",
+    "for i in range(2, N):\n",
+    "    dp[i] = max(dp[i-1], dp[i-2]+storages[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : 1\n",
-      "1 : 3\n",
-      "2 : 3\n",
-      "3 : 8\n"
+      "0 : 5\n",
+      "1 : 5\n",
+      "2 : 14\n",
+      "3 : 16\n",
+      "4 : 22\n",
+      "5 : 22\n",
+      "6 : 25\n",
+      "7 : 28\n",
+      "8 : 35\n",
+      "9 : 35\n",
+      "10 : 42\n",
+      "11 : 42\n",
+      "12 : 43\n",
+      "13 : 50\n",
+      "14 : 50\n"
      ]
     }
    ],
@@ -171,6 +178,60 @@
     "    dp_dict[i] = calc_max_total(storages, i)\n",
     "    \n",
     "for k, v in dp_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_max_total(array, i):\n",
+    "    if i == 0:\n",
+    "        dp[i] = array[i]\n",
+    "    elif i == 1:\n",
+    "        dp[i] = max(array[i-1], array[i])\n",
+    "    \n",
+    "    if i >= 2 and not dp[i]:\n",
+    "        dp[i] = max(calc_max_total(array, i-1), calc_max_total(array, i-1)+array[i])\n",
+    "        \n",
+    "    return dp[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 5\n",
+      "1 : 5\n",
+      "2 : 14\n",
+      "3 : 16\n",
+      "4 : 22\n",
+      "5 : 22\n",
+      "6 : 25\n",
+      "7 : 28\n",
+      "8 : 35\n",
+      "9 : 35\n",
+      "10 : 42\n",
+      "11 : 42\n",
+      "12 : 43\n",
+      "13 : 50\n",
+      "14 : 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_dp_dict = {}\n",
+    "for i in range(N):\n",
+    "    new_dp_dict[i] = calc_max_total(storages, i)\n",
+    "    \n",
+    "for k, v in new_dp_dict.items():\n",
     "    print(f\"{k} : {v}\")"
    ]
   }
