--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -138,6 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Bottom Up using for loop and tabulation\"\"\"\n",
+    "\n",
     "dp[0] = storages[0]\n",
     "dp[1] = max(storages[0], storages[1])\n",
     "\n",
