--- a/dbn_dynamic_programming.ipynb
+++ b/dbn_dynamic_programming.ipynb
@@ -185,10 +185,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Top Down using memoization\"\"\"\n",
+    "\n",
     "def calc_max_total(array, i):\n",
     "    if i == 0:\n",
     "        dp[i] = array[i]\n",
@@ -229,11 +231,11 @@
     }
    ],
    "source": [
-    "new_dp_dict = {}\n",
+    "dp_dict = {}\n",
     "for i in range(N):\n",
-    "    new_dp_dict[i] = calc_max_total(storages, i)\n",
+    "    dp_dict[i] = calc_max_total(storages, i)\n",
     "    \n",
-    "for k, v in new_dp_dict.items():\n",
+    "for k, v in dp_dict.items():\n",
     "    print(f\"{k} : {v}\")"
    ]
   }
