--- a/dbn_dp_becomingOne.ipynb
+++ b/dbn_dp_becomingOne.ipynb
@@ -9,10 +9,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = int(input())\n",
+    "d = [0] * 30001"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(2, x+1):\n",
+    "    d[i] = d[i-1] + 1\n",
+    "    \n",
+    "    if i % 2 == 0:      # 현재의 수가 2로 나눠서 떨어지는 경우\n",
+    "        d[i] = min(d[i], d[i//2]+1)\n",
+    "    if i % 3 == 0:      # 현재의 수가 3으로 나눠서 떨어지는 경우      \n",
+    "        d[i] = min(d[i], d[i//3]+1)\n",
+    "    if i % 5 == 0:      # 현재의 수가 5로 나눠서 떨어지는 경우\n",
+    "        d[i] = min(d[i], d[i//5]+1)"
+   ]
   }
  ],
  "metadata": {
