dbn_dp_becomingOne.ipynb

--- a/dbn_dp_becomingOne.ipynb
+++ b/dbn_dp_becomingOne.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,24 @@
     "    if i % 3 == 0:      # 현재의 수가 3으로 나눠서 떨어지는 경우      \n",
     "        d[i] = min(d[i], d[i//3]+1)\n",
     "    if i % 5 == 0:      # 현재의 수가 5로 나눠서 떨어지는 경우\n",
-    "        d[i] = min(d[i], d[i//5]+1)"
+    "        d[i] = min(d[i], d[i//5]+1)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 7 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d[297], d[298], d[299])"
    ]
   }
  ],
