dbn_dp_becomingOne.ipynb

--- a/dbn_dp_becomingOne.ipynb
+++ b/dbn_dp_becomingOne.ipynb
@@ -70,12 +70,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_min_count(x):\n",
-    "    "
+    "    d[1] = 0    \n",
+    "    d[x] = d[x-1] + 1\n",
+    "    if x == 2:\n",
+    "        d[x] = min(d[x], calc_min_count(x//2)+1)\n",
+    "    if x == 3:\n",
+    "        d[x] = min(d[x], calc_min_count(x//3)+1)\n",
+    "    if x == 5:\n",
+    "        d[x] = min(d[x], calc_min_count(x//5)+1)\n",
+    "    return d[x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d[297], d[298], d[299])"
    ]
   }
  ],
