More on dbn_becomingOne.ipynb

--- a/dbn_dp_becomingOne.ipynb
+++ b/dbn_dp_becomingOne.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,28 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_min_count(x):\n",
-    "    d[1] = 0\n",
-    "    d[2] = 1\n",
+    "    d[1] = 0    \n",
     "    \n",
     "    if d[x] != 0:    \n",
-    "        d[x] = d[x-1] + 1\n",
+    "        d[x] = calc_min_count(x-1) + 1\n",
     "        if x == 2:\n",
-    "            d[x] = min(d[x], calc_min_count(x//2)+1)\n",
+    "            d[x] = min(calc_min_count(x), calc_min_count(x//2)+1)\n",
     "        if x == 3:\n",
-    "            d[x] = min(d[x], calc_min_count(x//3)+1)\n",
+    "            d[x] = min(calc_min_count(x), calc_min_count(x//3)+1)\n",
     "        if x == 5:\n",
-    "            d[x] = min(d[x], calc_min_count(x//5)+1)\n",
+    "            d[x] = min(calc_min_count(x), calc_min_count(x//5)+1)\n",
     "    return d[x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
