More on dbn_dp_becoming0ne.ipynb

--- a/dbn_dp_becomingOne.ipynb
+++ b/dbn_dp_becomingOne.ipynb
@@ -60,12 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x : 161\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input())\n",
-    "d = [0] * 30001"
+    "d = [0] * 30001\n",
+    "print(f\"x : {x}\")"
    ]
   },
   {
@@ -74,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_min_count(x):\n",
-    "    \n",
+    "def calc_min_count(x):    \n",
     "    if x >= 2:    \n",
     "        d[x] = calc_min_count(x-1) + 1\n",
     "        if x % 2 == 0:\n",
