More on dbn_dp_becoming0ne.ipynb

--- a/dbn_dp_becomingOne.ipynb
+++ b/dbn_dp_becomingOne.ipynb
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x : 161\n"
+      "x : 7\n"
      ]
     }
    ],
@@ -79,57 +79,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_min_count(x):    \n",
-    "    if x >= 2:    \n",
+    "def calc_min_count(x):\n",
+    "    if x == 1:\n",
+    "        return 0   \n",
+    "    elif x >= 2:    \n",
     "        d[x] = calc_min_count(x-1) + 1\n",
     "        if x % 2 == 0:\n",
-    "            d[x] = min(calc_min_count(x), calc_min_count(x//2)+1)\n",
+    "            d[x] = min(d[x], calc_min_count(x//2)+1)\n",
     "        if x % 3 == 0:\n",
-    "            d[x] = min(calc_min_count(x), calc_min_count(x//3)+1)\n",
+    "            d[x] = min(d[x], calc_min_count(x//3)+1)\n",
     "        if x % 5 == 0:\n",
-    "            d[x] = min(calc_min_count(x), calc_min_count(x//5)+1)\n",
-    "    return d[x]"
+    "            d[x] = min(d[x], calc_min_count(x//5)+1)\n",
+    "        return d[x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0\n"
+      "6 7 8\n"
      ]
     }
    ],
    "source": [
-    "print(d[297], d[298], d[299])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d[1]"
+    "print(calc_min_count(297), calc_min_count(298), calc_min_count(299))"
    ]
   }
  ],
