--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,21 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 2,    m : 15\n"
+      "n : 2,    m : 15\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "n, m = list(map(int, input().split()))\n",
-    "print(f\"n : {n},    m : {m}\")      # n : number of coin assortments,  m : target amount"
+    "print(f\"n : {n},    m : {m}\")      # n : number of coin assortments,  m : target amount\n",
+    "\n",
+    "for k in map(int, input().split()):\n",
+    "    print(k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
