--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,7 @@
      "output_type": "stream",
      "text": [
       "n : 2,    m : 15\n",
-      "2\n",
-      "3\n"
+      "coin_kinds : [2, 3]\n"
      ]
     }
    ],
@@ -19,8 +18,8 @@
     "n, m = list(map(int, input().split()))\n",
     "print(f\"n : {n},    m : {m}\")      # n : number of coin assortments,  m : target amount\n",
     "\n",
-    "for k in map(int, input().split()):\n",
-    "    print(k)"
+    "coin_kinds = [k for k in map(int, input().split())]\n",
+    "print(f\"coin_kinds : {coin_kinds}\")"
    ]
   },
   {
