More on dbn_dp_becoming0ne.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,9 @@
     "print(f\"n : {n},    m : {m}\")      # n : number of coin assortments,  m : target amount\n",
     "\n",
     "coin_kinds = [k for k in map(int, input().split())]\n",
-    "print(f\"coin_kinds : {coin_kinds}\")"
+    "print(f\"coin_kinds : {coin_kinds}\")\n",
+    "\n",
+    "d = [0] * 10001"
    ]
   },
   {
