--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,8 @@
     "coin_kinds = [k for k in map(int, input().split())]\n",
     "print(f\"coin_kinds : {coin_kinds}\")\n",
     "\n",
-    "d = [0] * 10001"
+    "d = [0] * 10001\n",
+    "d[0], d[1], d[2], d[3] = 0, 0, 1, 1"
    ]
   },
   {
@@ -29,7 +30,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(4, m+1):\n",
+    "    if i % 2 == 0:\n",
+    "        d[i] = d[i//2] + 1\n",
+    "    if i % 3 == 0:\n",
+    "        d[i] = d[i//3] + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in coin_kinds:\n",
+    "    if m % 2 == 0:\n",
+    "        d[x] = d[x//2] + 1\n",
+    "        m /= 2\n",
+    "        \n",
+    "    if m % 3 == 0:\n",
+    "        d[x] = d[x//3] + 1\n",
+    "        m /= 3\n",
+    "        \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
