More on dbn_dp_becoming0ne.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -44,16 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in coin_kinds:\n",
-    "    if m % 2 == 0:\n",
-    "        d[x] = d[x//2] + 1\n",
-    "        m /= 2\n",
-    "        \n",
-    "    if m % 3 == 0:\n",
-    "        d[x] = d[x//3] + 1\n",
-    "        m /= 3\n",
-    "        \n",
-    "    "
+    "for x in coin_kinds: "
    ]
   }
  ],
