--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -44,7 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in coin_kinds: "
+    "coin_baskets = []\n",
+    "\n",
+    "for x in coin_kinds: \n",
+    "    if m % x == 0:\n",
+    "        d[x] = d[m // x] + 1\n",
+    "        m /= x\n",
+    "    "
    ]
   }
  ],
