More on dbn_dp_becoming0ne.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -31,26 +31,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(4, m+1):\n",
-    "    if i % 2 == 0:\n",
-    "        d[i] = d[i//2] + 1\n",
-    "    if i % 3 == 0:\n",
-    "        d[i] = d[i//3] + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coin_baskets = []\n",
-    "\n",
-    "for x in coin_kinds: \n",
-    "    if m % x == 0:\n",
-    "        d[x] = d[m // x] + 1\n",
-    "        m /= x\n",
-    "    "
+    "for i in range(4, m+1):         # i : target amount    \n",
+    "    #coin_baskets = []\n",
+    "    di_alternatives = []\n",
+    "    for j in coin_kinds:        # j : coin kind                \n",
+    "        if i % j == 0:\n",
+    "            di_alternatives.append(d[i//j] + 1)\n",
+    "        else:\n",
+    "            continue\n",
+    "    \n",
+    "    d[i] = min(di_alternatives)"
    ]
   }
  ],
