More on dbn_dp_becoming0ne.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -27,9 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "min() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dp_count_min_coins.ipynb Cell 2\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m d[i] \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39;49m(di_alternatives)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m d[i]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+     ]
+    }
+   ],
    "source": [
     "for i in range(4, m+1):         # i : target amount    \n",
     "    #coin_baskets = []\n",
@@ -39,8 +58,13 @@
     "            di_alternatives.append(d[i//j] + 1)\n",
     "        else:\n",
     "            continue\n",
+    "\n",
+    "    d[i] = min(di_alternatives)\n",
     "    \n",
-    "    d[i] = min(di_alternatives)"
+    "    if d[i]:\n",
+    "        print(-1)\n",
+    "    else:\n",
+    "        print(d[i])"
    ]
   }
  ],
