--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,50 +21,91 @@
     "coin_kinds = [k for k in map(int, input().split())]\n",
     "print(f\"coin_kinds : {coin_kinds}\")\n",
     "\n",
-    "d = [0] * 10001\n",
+    "d = [0] * 50\n",
     "d[0], d[1], d[2], d[3] = 0, 0, 1, 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4, m+1):\n",
+    "    di_alternatives = []\n",
+    "    for coin in coin_kinds:\n",
+    "        if i % coin == 0:\n",
+    "            di_alternatives.append(d[i//coin]+1)\n",
+    "        else:\n",
+    "            continue\n",
+    "    if len(di_alternatives) == 0:\n",
+    "        if d[i] == 0:\n",
+    "            d[i] = -1\n",
+    "    else:\n",
+    "        if d[i] == 0:\n",
+    "            d[i] = min(di_alternatives)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "min() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dp_count_min_coins.ipynb Cell 2\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m d[i] \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39;49m(di_alternatives)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m d[i]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W3sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+      "[0, 0, 1, 1, 2, -1, 2, -1, 3, 2, 1, -1, 3, -1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
    "source": [
-    "for i in range(4, m+1):         # i : target amount    \n",
-    "    #coin_baskets = []\n",
-    "    di_alternatives = []\n",
-    "    for j in coin_kinds:        # j : coin kind                \n",
-    "        if i % j == 0:\n",
-    "            di_alternatives.append(d[i//j] + 1)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4, m+1):\n",
+    "    i_chg = i\n",
+    "    while i_chg > 1:\n",
+    "        di_alternatives = []\n",
+    "        for coin in coin_kinds:\n",
+    "            if i_chg % coin == 0:\n",
+    "                di_alternatives.append(d[i_chg//coin]+1)\n",
+    "                i_chg //= coin\n",
+    "            else:\n",
+    "                continue\n",
+    "        if len(di_alternatives) == 0:\n",
+    "            if d[i] == 0:\n",
+    "                d[i] = -1\n",
+    "                break\n",
     "        else:\n",
-    "            continue\n",
-    "\n",
-    "    d[i] = min(di_alternatives)\n",
-    "    \n",
-    "    if d[i]:\n",
-    "        print(-1)\n",
-    "    else:\n",
-    "        print(d[i])"
+    "            if d[i] == 0:\n",
+    "                d[i] = min(di_alternatives)\n",
+    "        \n",
+    "        if i_chg == 1:\n",
+    "            break               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, -1, 1, -1, 3, 2, -1, -1, 2, -1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
    ]
   }
  ],
