More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     "coin_kinds = [k for k in map(int, input().split())]\n",
     "print(f\"coin_kinds : {coin_kinds}\")\n",
     "\n",
-    "d = [0] * 50\n",
+    "d = [0] * 16\n",
     "d[0], d[1], d[2], d[3] = 0, 0, 1, 1"
    ]
   },
@@ -66,6 +66,34 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4, m+1):\n",
+    "    i_chg = i\n",
+    "    while i_chg > 1:\n",
+    "        di_alternatives = []\n",
+    "        for coin in coin_kinds:\n",
+    "            if i_chg % coin == 0:\n",
+    "                di_alternatives.append(d[i_chg//coin]+1)\n",
+    "                i_chg //= coin\n",
+    "            else:\n",
+    "                continue\n",
+    "        if len(di_alternatives) == 0:\n",
+    "            if d[i] == 0:\n",
+    "                d[i] = -1\n",
+    "                break\n",
+    "        else:\n",
+    "            if d[i] == 0:\n",
+    "                d[i] = min(di_alternatives)\n",
+    "        \n",
+    "        if i_chg == 1:\n",
+    "            break               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
