More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +108,8 @@
     "            else:\n",
     "                continue\n",
     "        if len(di_alternatives) == 0:\n",
-    "            if d[i] == 0:\n",
-    "                d[i] = -1\n",
-    "                break\n",
+    "            d[i] = -1\n",
+    "            break\n",
     "        else:\n",
     "            if d[i] == 0:\n",
     "                d[i] = min(di_alternatives)\n",
@@ -121,19 +120,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 2, -1, 1, -1, 3, 2, -1, -1, 2, -1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "[0, 0, 1, 1, 2, -1, 1, -1, 3, 2, -1, -1, 2, -1, -1, -1]\n"
      ]
     }
    ],
    "source": [
     "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10, 11):\n",
+    "    i_chg = i\n",
+    "    di_alternatives = []\n",
+    "    while i_chg > 1:\n",
+    "        #di_alternatives = []\n",
+    "        for coin in coin_kinds:\n",
+    "            if i_chg % coin == 0:\n",
+    "                di_alternatives.append(d[i_chg//coin]+1)\n",
+    "                i_chg //= coin\n",
+    "            else:\n",
+    "                continue\n",
+    "        if len(di_alternatives) == 0:\n",
+    "            d[i] = -1\n",
+    "            break\n",
+    "        else:\n",
+    "            if d[i] == 0:\n",
+    "                d[i] = min(di_alternatives)\n",
+    "        \n",
+    "        if i_chg == 1:\n",
+    "            break               "
    ]
   }
  ],
