More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -162,6 +162,19 @@
     "        if i_chg == 1:\n",
     "            break               "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 10\n",
+    "k_alternatives = []\n",
+    "for coin in coin_kinds:\n",
+    "    if k % coin:\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
